--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ button {
   color: #ffffff;
   background-color: #212222;
   border-color: #ffffff;
+  border-style: solid;
   transition: background-color 1s,
   color 1s;
 }
@@ -89,4 +90,81 @@ button:active {
 img:hover {
   transition: 1s;
   box-shadow: 2px 3px 15px #41da8d;
+}
+
+section {
+  height: 100vh;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  position: relative;
+  }
+
+#section-1 {
+  background-color: #212222;
+  height: 100vh;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  position: relative;
+}
+
+#section-2 {
+  background-color: #212222;
+  height: 100vh;
+  margin-top: 400px;
+  margin-bottom: 100px;
+  position: relative;
+
+}
+
+video {
+  display: block;
+  margin: auto;
+  margin-top: 40px;
+  border-radius: 50px;
+  object-fit: cover;
+
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.contact-group {
+  
+  height: 100vh;
+  align-content: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.contact-left {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 20px;
+}
+
+input {
+  width: 400px;
+  height: 50px;
+  padding: 25px;
+  border-radius: 50px;
+  color:#212222
+}
+
+textarea {
+  width: 400px;
+  height: 140px;
+  padding: 15px;
+  border-radius: 20px;
+  color:#212222
+}
+
+hr {
+  width: 120px;
+  height: 5px;
+  border: none;
+  color: #21FE8A;
 }
